role correction